--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Carlos Luevano",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.12"
   }
